# MO2_Plugin_Examples

./: .clangd  .clineignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.py  deploy.bat  deploy.py  deploy_py.py  fix-mobase-stubs.ps1  mob.bat  mob.ini  mob.local_plugins.ini  mob.py  pyproject.toml
cpp_examples/: CMakeLists.txt
cpp_examples/hello_feature/src/: hellofeature.cpp  hellofeature.h  ihello_feature.h
cpp_examples/hello_plugin/: CMakeLists.txt
cpp_examples/hello_plugin/src/: CMakeLists.txt  hello_plugin.cpp  hello_plugin.h
cpp_examples/hello_tool/: CMakeLists.txt
cpp_examples/hello_tool/src/: hello_tool.cpp  hello_tool.h  hello_tool.qrc
cpp_examples/hello_world_plugin/: CMakeLists.txt
cpp_examples/hello_world_plugin/src/: hello_world_plugin.cpp  hello_world_plugin.h
cpp_examples/use_hello_feature/: CMakeLists.txt
cpp_examples/use_hello_feature/src/: hello_feature_plugin.cpp
docs/: README.md
docs/basic_games/: DIAGRAMS.md  README.md
docs/features/: CUSTOM_FEATURES.md  DIAGRAM.md  GUIDE.md  README.md
docs/file_tree/: FILE_TREE_DETAILS.md  FILE_TREE_DIAGRAMS.md  FILE_TREE_EXAMPLE.md
docs/gamebryo/: DIAGRAMS.md  GUIDE.md  README.md
docs/oblivion/: DIAGRAMS.md  OBLIVION_REMASTER_RECOMMENDATIONS.md  README.md
docs/python/: DIAGRAMS.md  EVENTS.md  GUIDE.md  PYTHON_BINDINGS_VIA_PLUGIN_RESEARCH.md  README.md
docs/tools/: DIAGRAMS.md  README.md
docs/uibase/: DIAGRAMS.md  GUIDE.md  README.md
python_examples/: hello_plugin.py
python_examples/hello_world_plugin/: hello_world.py
scripts/: build.py  deploy.py  update_clangd.py
