[project]
name = "mo2-plugin-examples"
version = "0.1.0"
description = "Mod Organizer 2 - Plugin Examples"
authors = [
    {name = "Mrowr Purr",email = "mrowr.purr@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
mobase-stubs = "^2.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["**/__pycache__", "**/.venv", "**/venv", "**/.mypy_cache"]
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = false
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"
reportMissingModuleSource = false

[tool.black]
line-length = 180
